[package]
name = "sensor_node"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "^0.1"
rand = {version = "^0.8", features = ['small_rng']}
tokio = { version = "^1", features = ["rt-multi-thread", "macros", "time"] }
log = "^0.4"
simplelog = "^0.12"
thiserror = "^1"
paho-mqtt = "^0.12"

timebay-common = { path = "../timebay-common" }
tf-luna = { path = "../tf-luna" }

[features]
# Set when you want to test without a tfluna attached
no_sensor = []
