[package]
name = "timebay-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.152"
serde_derive = "1.0.152"
derive_more = "0.99.17"
thiserror = "1.0.38"
phf = { version = "0.11", features = ["macros"] }
log = "0.4.17"

paho-mqtt = "0.12.0"
postcard = { version = "1.0.2", features = ['alloc'] }