[package]
name = "timebay-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1"
serde_derive = "^1"
derive_more = "^0"
thiserror = "^1"
phf = { version = "0.11", features = ["macros"] }
log = "^0.4"

paho-mqtt = "^0.12"
postcard = { version = "^1.0", features = ['alloc'] }