[package]
name = "timebay_tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = "0.20.0"
log = "0.4.17"
paho-mqtt = "0.12.0"
thiserror = "1.0.38"
derive_more = "0.99.17"
crossterm = "0.26.1"
tokio = "1.26.0"
itertools = "0.10.5"
crossfire = "1.0.0"

timebay-common = { path = "../timebay-common" }