[package]
name = "timebay_tui"
version = "0.1.0"
edition = "2021"

[dependencies]
cursive = "^0.20"
flexi_logger = "0.22.6"
cursive-flexi-logger-view = "0.5.0"
log = "^0.4"
paho-mqtt = "^0.12"
thiserror = "^1"
derive_more = "^0"
tokio = {version = "^1", features=['rt-multi-thread']}
itertools = "^0.10"
crossfire = "^1"
futures = "^0.3"

timebay-common = { path = "../timebay-common" }
